[package]
name = "q1tsim-derive"
version = "0.2.0"
authors = ["Gé Vissers <ge@q1t.nl>"]
description="Derive macros for the q1tsim crate."
repository="https://github.com/Q1tBV/q1tsim/qt1sim-derive"
license="Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.14"
quote = "0.6"
